# kuksa-incubation

gRPC-on-ESP32/: .gitignore  CMakeLists.txt  install_nanopb.sh
gRPC-on-ESP32/main/: decoder.c  encoder.c  encoder.h  grpc.c  grpc.h  main.c
gRPC-on-ESP32/proto/: val.proto
kuksa-persistence-provider/: Cargo.toml  Readme.md  config.json  statestore.json
kuksa-persistence-provider/src/: kuksaconnector.rs  main.rs  storage.rs
kuksa-persistence-provider/src/storage/: filestorage.rs
zenoh-kuksa-provider/: Cargo.toml
zenoh-kuksa-provider/src/: main.rs  provider_config.rs
zenoh-kuksa-provider/src/utils/: kuksa_utils.rs  metadata_store.rs
